--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -16,8 +16,14 @@
 
 <hr>
 
-<% @flights.each do |flight| %>
-  <p>Flight from <%= @airport_codes[flight.origin_airport_id]%> to <%= @airport_codes[flight.destination_airport_id] %></p>
-  <p>Departure starts: <%= flight.start %></p>
-  <p>Flight duration: <%= flight.duration %></p><hr>
+<%= form_with method: :get do |form| %>
+  <% @flights.each do |flight| %>
+    <%= form.label :flight_to_book, "Book this flight", value: flight.id %>
+    <%= form.radio_button :flight_to_book, flight.id %>
+    <p>Flight from <%= @airport_codes[flight.origin_airport_id]%> to <%= @airport_codes[flight.destination_airport_id] %></p>
+    <p>Departure starts: <%= flight.start %></p>
+    <p>Flight duration: <%= flight.duration %></p><hr>
+  <% end %>
+  <%= form.hidden_field :passenger_count, value: @query.nil? ? 1 : @query[:passenger_count] %>
+  <%= form.submit "Create a booking" %>
 <% end %>
