--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -20,7 +20,7 @@
   <% @flights.each do |flight| %>
     <%= form.label :flight_to_book_id, "Book this flight", value: flight.id %>
     <%= form.radio_button :flight_to_book_id, flight.id %>
-    <p>Flight from <%= @airport_codes[flight.origin_airport_id]%> to <%= @airport_codes[flight.destination_airport_id] %></p>
+    <p>Flight from <%= airport_codes[flight.origin_airport_id]%> to <%= airport_codes[flight.destination_airport_id] %></p>
     <p>Departure starts: <%= flight.start %></p>
     <p>Flight duration: <%= flight.duration %></p><hr>
   <% end %>
