--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -16,14 +16,16 @@
 
 <hr>
 
-<%= form_with url: new_booking_path, method: :get do |form| %>
-  <% @flights.each do |flight| %>
-    <%= form.label :flight_to_book_id, "Book this flight", value: flight.id %>
-    <%= form.radio_button :flight_to_book_id, flight.id %>
-    <p>Flight from <%= airport_codes[flight.origin_airport_id]%> to <%= airport_codes[flight.destination_airport_id] %></p>
-    <p>Departure starts: <%= flight.start %></p>
-    <p>Flight duration: <%= flight.duration %></p><hr>
+<% unless @query.nil? || @flights.empty? %>
+  <%= form_with url: new_booking_path, method: :get do |form| %>
+    <% @flights.each do |flight| %>
+      <%= form.label :flight_to_book_id, "Book this flight", value: flight.id %>
+      <%= form.radio_button :flight_to_book_id, flight.id %>
+      <p>Flight from <%= airport_codes[flight.origin_airport_id]%> to <%= airport_codes[flight.destination_airport_id] %></p>
+      <p>Departure starts: <%= flight.start %></p>
+      <p>Flight duration: <%= flight.duration %></p><hr>
+    <% end %>
+    <%= form.hidden_field :passenger_count, value: @query.nil? ? 1 : @query[:passenger_count] %>
+    <%= form.submit "Create a booking" %>
   <% end %>
-  <%= form.hidden_field :passenger_count, value: @query.nil? ? 1 : @query[:passenger_count] %>
-  <%= form.submit "Create a booking" %>
 <% end %>
