--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -10,5 +10,6 @@
     <%= passenger_form.text_field :email %><br>
   <% end %><br>
 
+  <%= form.hidden_field :flight_to_book_id, value: @flight_to_book.id %>
   <%= form.submit %>
 <% end %>
