--- a/app/views/passenger_mailer/thank_you_email.html.erb
+++ b/app/views/passenger_mailer/thank_you_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Thank you for booking the flight, <%= @user.name %></h1>
+    <h1>Thank you for booking the flight, <%= @passenger.name %></h1>
     <p>
       You have successfully booked the flight on Odin Flight Booker!
     </p>
